@@ -1,27 +1,25 @@
-AC_INIT(libxklavier/xklavier.c)
+AC_PREREQ(2.59)
 
-PACKAGE=libxklavier
+AC_INIT([libxklavier], [3.7])
+AC_CONFIG_SRCDIR([libxklavier/xklavier.c])
+AM_INIT_AUTOMAKE([1.10 dist-bzip2])
+
+AM_CONFIG_HEADER(config.h)
+AC_CONFIG_MACRO_DIR(m4)
+
 MAJOR_VERSION=3
 MINOR_VERSION=7
-VERSION=$MAJOR_VERSION.$MINOR_VERSION
 VERSION_INFO=13:0:1
 
 AC_SUBST(MAJOR_VERSION)
 AC_SUBST(MINOR_VERSION)
-AC_SUBST(PACKAGE)
-AC_SUBST(VERSION)
 AC_SUBST(VERSION_INFO)
-
-AM_CONFIG_HEADER(config.h)
-
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 
 AM_MAINTAINER_MODE
 
 AC_PROG_CC
 AC_ISC_POSIX
 AC_HEADER_STDC
-dnl AC_ARG_PROGRAM
 AM_PROG_LIBTOOL
 AM_ICONV
 
@@ -31,9 +29,6 @@ GTK_DOC_CHECK(1.0)
 AM_CONDITIONAL(ENABLE_GTK_DOC, false)
 AM_CONDITIONAL(GTK_DOC_USE_LIBTOOL, false)
 ])
-
-dnl From Bruno Haible.
-dnl From gnoome-vfs
 
 AC_DEFUN([jm_LANGINFO_CODESET],
 [
@@ -155,6 +150,13 @@ PKG_CHECK_MODULES(GLIB, \
 AC_SUBST(GLIB_LIBS)
 AC_SUBST(GLIB_CFLAGS)
 
+PKG_CHECK_MODULES(XINPUT, xi >= 1.1.3,
+                  [AC_DEFINE(HAVE_XINPUT, 1, [Define if xinput dev lib is available])
+                  have_xinput=yes], [have_xinput=no])
+
+AC_SUBST(XINPUT_LIBS)
+AC_SUBST(XINPUT_CFLAGS)
+
 AC_SUBST(CFLAGS)
 AC_SUBST(LDFLAGS)
 
@@ -192,6 +194,7 @@ if test "$enable_xkb_support" == "yes" ; then
     echo "         default ruleset: $xkb_default_ruleset"
     echo "         base: $xkb_base"
     echo "         xkbcomp is used from: $xkb_bin_base"
+    echo "         xinput available: $have_xinput"
   else
     echo "    XKB, libxkbfile is NOT present"
   fi
