@@ -1,3 +1,8 @@
+2008-11-16 svu
+
+	* configure.in, libxklavier/Makefile.am: updating the build process,
+	adding XInput dependency
+
 2008-09-28 svu
 
 	* libxklavier/xklavier_config_xkb.c,
